force-app/main/default/objects/copado__Event__e/copado__Event__e.object-meta.xml
<CustomObject>
    <label>Copado Event</label>
    <pluralLabel>Copado Events</pluralLabel>
</CustomObject>