force-app/main/default/objects/copado__Event__e/fields/copado__Payload__c.field-meta.xml
<CustomField>
    <fullName>copado__Payload__c</fullName>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>