force-app/main/default/objects/copado__Event__e/fields/copado__Publisher_Code__c.field-meta.xml
<CustomField>
    <fullName>copado__Publisher_Code__c</fullName>
    <label>Publisher Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>