force-app/main/default/objects/copado__Event__e/fields/copado__Topic_Uri__c.field-meta.xml
<CustomField>
    <fullName>copado__Topic_Uri__c</fullName>
    <label>Topic Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>